--- a/conferenceRoomBooking/src/main/resources/application.properties
+++ b/conferenceRoomBooking/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #JDBC configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/restaurantBooking?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/conferenceRoomBooking?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 
@@ -9,4 +9,4 @@ spring.jpa.show.sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-logging.level.org.springframework.web = debug
+logging.level.org.springframework.web: DEBUG
