--- a/L3Test/src/main/resources/application.properties
+++ b/L3Test/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 logging.level.org.springframework.web = debug
+spring.a=100
